<resources>
    <string name="app_name">Tab And Go</string>
    <string name="color_bule">蓝色</string>
    <string name="color_yellow">黄色</string>
    <string name="color_green">绿色</string>
    <string name="color_red">红色</string>
    <string name="color_on">亮</string>
    <string name="color_off">关</string>
    <string name="name_buzzer">蜂鸣器</string>
    <string name="buzzer_time">蜂鸣时间单位毫秒</string>
    <string name="info_system">系统版本</string>
    <string name="info_ic">单片版本</string>
    <string name="info_sn">系统SN</string>
    <string name="attack">防拆</string>
    <string name="attack_type">攻击类型</string>
    <string name="attack_source">攻击源头</string>
    <string name="attack_reset">防拆复位</string>
    <string name="psam_open">打开</string>
    <string name="psam_close">关闭</string>
    <string name="psam_on">上电</string>
    <string name="psam_off">下电</string>
    <string name="psam_apdu">发送内容十六进制字符</string>
    <string name="nfc_open">上电</string>
    <string name="nfc_close">下电</string>
    <string name="nfc_detect">寻卡</string>
    <!--    <string name="nfc_card_data">NFC卡片数据</string>-->
    <string name="update_ic">升级芯片</string>
    <string name="update_system">升级系统</string>
    <string name="system_reboot">系统重启</string>
    <string name="log_download">下载日志</string>
    <string name="info_sdk_service_version">"SDK服务版本"</string>
    <string name="nfc_apdu">APDU</string>
    <!--    <string name="nfc_authentication">加载密钥</string>-->
    <string name="nfc_readblock">读块内容</string>
    <string name="nfc_writeblock">写块内容</string>
    <string name="nfc_readvalue">读数值</string>
    <string name="nfc_writevalue">写数值</string>
    <string name="nfc_incrementvalue">自增</string>
    <string name="nfc_decrementvalue">自减</string>
    <string name="nfc_restore">恢复</string>
    <string name="nfc_transfer">转移</string>
    <string name="main_update">升级</string>
    <string name="main_info">版本sn</string>
    <string name="back">返回</string>
    <string name="result_tip">(0:成功 other:错误码)结果:</string>
    <string name="nfc_param">显示参数</string>
    <string name="nfc_param_hide">隐藏参数</string>
    <string name="nfc_detect_no_stop">循环读卡</string>
    <string name="nfc_detect_no_stop_stop">停止循环</string>
    <string name="nfc_pswtype">加载密钥:</string>
    <string name="nfc_title_writeblock">写Block:</string>
    <string name="nfc_title_writeValue">写Value:</string>
    <string name="emv_init">emv初始化</string>
    <string name="emv_detect">emv寻卡</string>
    <string name="emv_transaction">emv交易</string>
    <string name="emv_close">emv下电</string>
    <string name="emv_title_amount">金额:</string>
    <string name="emv_loop">循环交易</string>
    <string name="nfc_title_apdu">发apdu</string>

    <!-- IC/PSAM -->
    <string name="psam_read_rate">读卡速率: 0x</string>
    <string name="pcsc_test">IC卡测试</string>
    <string name="psam_test">PSAM测试</string>
    <string name="open_reader">打开读卡器</string>
    <string name="close_reader">关闭读卡器</string>
        <string name="verify">验证</string>
    <string name="modify">修改</string>
    <string name="sle4442read_addr">读取地址(0~255):</string>
    <string name="sle4442read_numm">读取个数(1~256):</string>
    <string name="sle4442write_addr">写入地址(0~255):</string>
    <string name="sle4428read_addr">读取地址(0~1023):</string>
    <string name="sle4428read_num">读取个数(0~1024):</string>
    <string name="sle4428write_addr">写入地址(0~1023):</string>
    <string name="at88sc153read_addr">读取地址(0~3FH)</string>
    <string name="at88sc153read_numm">读取个数(0~70H):</string>
    <string name="at88sc153write_addr">写入地址(0~3FH):</string>
    <string name="at88sc153BtWrite">write</string>
    <string name="at88sc153BtRead">read</string>
    <string name="content">内容:</string>
    <string name="PSC">密码</string>
    <string name="reader">读卡器:</string>
    <string name="get_ATR">获取ATR</string>
    <string name="get_FD">查询读卡速率</string>
    <string name="get_PROTOCOL">获取 protocol</string>
    <string name="apdu_to_send">输入apdu</string>
    <string name="send_apdu">发送APDU</string>
    <string name="get_ATR_fail">获取ATR失败</string>
    <string name="get_ATR_success">获取ATR成功：</string>
    <string name="get_data_success">获取数据成功</string>
    <string name="get_protocol_success">获取协议成功</string>
    <string name="power_on">上电</string>
    <string name="power_off">下电</string>
    <string name="send_APDU_fail">发送APDU失败</string>
    <string name="send_APDU_success">发送APDU成功，返回：</string>
    <string name="send_comm_success">发送指令成功</string>
    <string name="ic_waring">术语解释：\nATR:复位应答指令\nprotocol：通信协议\n"A0A40000023F00":打开智能卡根目录指令\nAPDU:智能卡通讯指令</string>


    <!-- NFC -->
    <string name="nfc">NFC测试</string>
    <string name="nfc_cpu_m1_test">CPU/Mifare Classic卡测试</string>
    <string name="nfc_felica_test">Felica卡测试</string>
    <string name="nfc_mifare_desfire_test">Mifare Desfire 测试</string>
    <string name="nfc_mifare_ultraLight_test">Mifare UltraLight 测试</string>
    <string name="nfc_mifare_plus_se_test">Mifare Plus SE 测试</string>
    <string name="nfc_ntag_21x_test">NTAG 20X 测试</string>
    <string name="nfc_tv_scanning">扫描中...</string>
    <string name="nfc_tv_scann_count">次数</string>
    <string name="nfc_tv_scann_time">时间</string>
    <string name="nfc_open_text">打开NFC设备</string>
    <string name="nfc_close_text">关闭 NFC设备</string>
    <string name="nfc_check_text">检查 NFC设备</string>
    <string name="nfc_card_data">NFC 卡片数据</string>
    <string name="get_ats">获取 ATS</string>
    <string name="get_uid">获取 UID</string>
    <string name="authenticate">认证</string>
    <string name="nfc_block_data">块数据(16个字节): </string>
    <string name="nfc_block_hit">请输入16个字节的数据: </string>
    <string name="write_block">写入块</string>
    <string name="read_block">读出块</string>
    <string name="write_value">写入初始值</string>
    <string name="read_value">读出</string>
    <string name="halt_text">挂起</string>
    <string name="remove_text">移除</string>
    <string name="nfc_value_hit">请输入16个字节的数据: </string>
    <string name="inc_text">加法</string>
    <string name="dec_text">减法</string>
    <string name="nfc_tips">需测试0cm，最远距离时，中心，左侧，右侧，前后位置，不同种类（包括typeA，typeB，银行卡)APDU的测试</string>
    <string name="nfc_xzgn">选择功能</string>
    <string name="nfc_xznfcsbfs">请选择NFC识别方式</string>
    <string name="nfc_ys">原生 NFC</string>
    <string name="nfc_telpo">"天波 NFC"</string>
    <string name="nfc_telpo_pn512">Telpo NFC(PN512)"</string>
    <string name="nfc_area_text">请在该区域进行刷卡</string>

    <string name="card_type">卡片类型: </string>
    <string name="type_b">B类</string>
    <string name="type_a">A类</string>
    <string name="type_c">C类</string>
    <string name="atqa_data">ATQA: </string>
    <string name="atqb_data">ATQB: </string>
    <string name="pupi_data">PUPI: </string>
    <string name="sak_data">SAK: </string>
    <string name="uid_data">UID: </string>

    <string name="open_success">打开成功:</string>
    <string name="bl_hqqx">获取USB权限</string>
    <string name="bt_scan_item_name">名称</string>
    <string name="bt_scan_item_mac">Mac地址</string>
    <string name="bt_scan_item_rssi">强度</string>
    <string name="idcard_read_once">读卡</string>
    <string name="idcard_start_read">开始循环读卡</string>
    <string name="tacard_TAyz">Type A卡阅读器</string>
    <string name="tacard_qxrsj">请写入数据</string>
    <string name="tacard_qr">确认</string>
    <string name="tacard_xrsj">写入数据</string>
    <string name="idcard_qhqqx">请获取权限</string>
    <string name="idcard_qfk">请放卡</string>
    <string name="idcard_cscs">测试次数</string>
    <string name="idcard_cgcs">成功次数</string>
    <string name="idcard_sbcs">失败次数</string>
    <string name="idcard_djs">倒计时</string>
    <string name="fprint_ppcg">指纹仪认证成功</string>
    <string name="fprint_ppsb">指纹仪认证失败</string>
    <string name="fprint_wzwy">未找到指纹仪设备</string>
    <string name="idcard_sbljcg">设备连接成功</string>
    <string name="idcard_stop_read">停止循环读卡</string>
    <string name="fprint_qyzzw">请验证指纹</string>

    <string name="wifi_iperf">wifi吞吐测试</string>
    <string name="iperf_text">iPerf for Android</string>
    <color name="WelcomeTextColor">#fffafa</color>
    <string name="i"> i</string>
    <string name="copyright">Developed by Shir Degani &amp; Yuval Degani © 2011</string>
    <string name="help_button_title">&quot;?&quot;</string>

    <string name="nfc_reset">复位</string>
    <string name="nfc_open_serial">打开串口</string>
    <string name="nfc_close_serial">关闭串口</string>
    <string name="nfc_check_version">查版本</string>
    <string name="nfc_searching">寻卡</string>
    <string name="nfc_authentication">认证</string>
    <string name="nfc_password_TypeA">密码类型:A</string>
    <string name="nfc_password_TypeB">密码类型:B</string>
    <string name="nfc_read_block">读Block</string>
    <string name="nfc_write_block">写Block</string>
    <string name="nfc_initialize_wallet">初始化电子钱包</string>
    <string name="nfc_read_wallet">读电子钱包</string>
    <string name="nfc_write_wallet">操作电子钱包</string>
    <string name="nfc_plus">加</string>
    <string name="nfc_reduce">减</string>
    <string name="nfc_block_to_cache">块数据拷贝到缓存</string>
    <string name="nfc_cache_to_block">缓存拷贝块数据</string>
    <string name="nfc_send_apdu">发送APDU</string>
    <string name="nfc_close_card">关闭卡</string>
    <string name="nfc_write_block_hint">待写入数据(16字节)</string>
    <string name="nfc_write_wallet_hint">money(4字节)</string>
    <string name="nfc_password_TypeA_hint">密码</string>

    <string name="nfc_card_type">卡片类型</string>
    <string name="nfc_card_no">卡号</string>
    <string name="nfc_authentication_succeed">认证成功</string>
    <string name="nfc_authentication_fail">认证失败</string>
    <string name="nfc_sector_data">扇区数据</string>
    <string name="nfc_read_fail">读取失败</string>
    <string name="nfc_write_succeed">写入成功</string>
    <string name="nfc_write_fail">写入失败</string>
    <string name="nfc_init_wallet_succeed">初始化电子钱包成功</string>
    <string name="nfc_init_wallet_fail">初始化电子钱包失败</string>
    <string name="nfc_wallet_amount">电子钱包金额</string>
    <string name="nfc_read_wallet_fail">读取电子钱包金额失败</string>
    <string name="nfc_write_wallet_succeed">操作电子钱包成功</string>
    <string name="nfc_write_wallet_fail">操作电子钱包失败</string>
    <string name="nfc_block_to_cache_succeed">块数据拷贝到缓存成功</string>
    <string name="nfc_block_to_cache_fail">块数据拷贝到缓存失败</string>
    <string name="nfc_cache_to_block_succeed">缓存拷贝块数据成功</string>
    <string name="nfc_cache_to_block_fail">缓存拷贝块数据失败</string>
    <string name="nfc_send_apdu_fail">发送apdu失败</string>
    <string name="nfc_close_succeed">关闭成功</string>
    <string name="nfc_close_fail">关闭失败</string>
    <string name="nfc_loop_find">循环寻卡</string>
    <string name="nfc_loop_start_find">开始寻卡</string>
    <string name="nfc_loop_stop_find">停止寻卡</string>

    <!-- common  -->
    <string name="common_stress_test">压测</string>
    <string name="common_open">打开</string>
    <string name="common_close">关闭</string>
    <string name="common_success">成功</string>

    <!-- led_test -->
    <string name="subsystem_led_test_title">LED和蜂鸣测试</string>
    <string name="subsystem_led_control">LED控制</string>
    <string name="subsystem_led_type">类型</string>
    <string name="subsystem_led_color">颜色</string>
    <string name="subsystem_buzzer_control">蜂鸣 控制</string>

    <string-array name="ledColor">
        <item>红</item>
        <item>绿</item>
        <item>黄</item>
    </string-array>
</resources>
