<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >


    <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		>
	
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical" >

		<Button
			android:id="@+id/nfc_open_btn"
			style="@style/buttonNumberStyle"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/button_number_violet_shape"
			android:text="@string/nfc_open"
			android:onClick="nfcopen"
			/>

		 <Button
			android:id="@+id/nfc_check_btn"
			style="@style/buttonNumberStyle"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/button_number_violet_shape"
			android:text="@string/nfc_detect"
			android:onClick="detect"
			android:enabled="false"
			 />

		 <TextView
			android:id="@+id/textview_uid"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/nfc_card_data"
			android:textColor="@color/color_6b6b6b"
			 android:textSize="20sp"
			 />

		<EditText
			android:id="@+id/nfc_uid_data"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:ems="10"
			android:enabled="false"
			android:textColor="@color/color_6b6b6b" />

		<TextView
			android:id="@+id/textNfcReader"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:paddingLeft="10dp"
			android:layout_marginTop="10dp"
			android:text="@string/reader"
			android:textSize="16sp" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal" >

			<EditText
				android:id="@+id/editTextNfcAPDU"
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:layout_weight="1"
				android:hint="@string/apdu_to_send"
				android:inputType="textMultiLine"
				android:text="00A404000E325041592E5359532E444446303100"
				android:textSize="14sp" />

			<Button
				android:id="@+id/buttonNfcAPDU"
				style="@style/buttonNumberStyle"
				android:layout_width="0dp"
				android:layout_height="50dp"
				android:layout_marginLeft="20dp"
				android:layout_weight="1"
				android:background="@drawable/button_number_violet_shape"
				android:text="@string/send_apdu"
				android:onClick="sendApdu"
				android:enabled="false"
				>
			</Button>
		</LinearLayout>

		<Button
			android:id="@+id/getAtsBtn"
			style="@style/buttonNumberStyle"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/button_number_violet_shape"
			android:text="@string/get_ats"
			android:visibility="gone"
			/>

		 <TextView
			android:id="@+id/textViewAtsData"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/color_6b6b6b"
			 android:visibility="gone"
			 />

		 <Button
			android:id="@+id/getUidBtn"
			style="@style/buttonNumberStyle"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/button_number_violet_shape"
			android:text="@string/get_uid"
			 android:visibility="gone"
			 />

		 <TextView
			android:id="@+id/textViewUidData"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/color_6b6b6b" />

		 <Button
			android:id="@+id/authenticateBtn"
			style="@style/buttonNumberStyle"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/button_number_violet_shape"
			android:text="@string/authenticate"
			 android:onClick="authentication"
			 android:enabled="false"
			 />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal" >

			 <EditText
				 android:id="@+id/editTexWriteBlock"
				 android:layout_width="0dp"
				 android:layout_height="fill_parent"
				 android:layout_weight="1"
				 android:layout_marginTop="10dp"
				 android:hint="@string/nfc_block_hit"
				 android:inputType="textMultiLine"
				 android:text="00112233445566778899AABBCCDDEEFF"
				 android:textSize="14sp" />

			 <Button
				 android:id="@+id/writeBlockBtn"
				 style="@style/buttonNumberStyle"
				 android:layout_width="0dp"
				 android:layout_height="50dp"
				 android:layout_marginLeft="20dp"
				 android:layout_weight="1"
				 android:layout_marginTop="10dp"
				 android:background="@drawable/button_number_violet_shape"
				 android:text="@string/write_block"
				 android:onClick="writeBlock"
				 android:enabled="false"
				 >
			 </Button>
		 </LinearLayout>

		<Button
			android:id="@+id/readBlockBtn"
			style="@style/buttonNumberStyle"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/button_number_violet_shape"
			android:text="@string/read_block"
			android:onClick="readBlock"
			android:enabled="false"
			/>

		 <TextView
			android:id="@+id/textViewBlockData"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/color_6b6b6b" />


		 <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal" >

			 <EditText
				 android:id="@+id/editTexWriteValue"
				 android:layout_width="0dp"
				 android:layout_height="fill_parent"
				 android:layout_weight="1"
				 android:hint="@string/nfc_value_hit"
				 android:inputType="textMultiLine"
				 android:text="00112233"
				 android:textSize="14sp" />

			 <Button
				 android:id="@+id/writeValueBtn"
				 style="@style/buttonNumberStyle"
				 android:layout_width="0dp"
				 android:layout_height="50dp"
				 android:layout_marginLeft="20dp"
				 android:layout_weight="1"
				 android:background="@drawable/button_number_violet_shape"
				 android:text="@string/write_value"
				 android:onClick="writeValue"
				 android:enabled="false"
				 >
			 </Button>
		 </LinearLayout>

		 <!-- INCREMENT/DECREMENT  -->
		 <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal" >

			 <Button
				 android:id="@+id/incBtn"
				 style="@style/buttonNumberStyle"
				 android:layout_width="0dp"
				 android:layout_height="50dp"
				 android:layout_marginTop="10dp"
				 android:layout_weight="1"
				 android:background="@drawable/button_number_violet_shape"
				 android:text="@string/inc_text"
				 android:onClick="incrementValue"
				 android:enabled="false"
				 >
			 </Button>

			 <Button
				 android:id="@+id/decBtn"
				 style="@style/buttonNumberStyle"
				 android:layout_width="0dp"
				 android:layout_height="50dp"
				 android:layout_marginLeft="20dp"
				 android:layout_marginTop="10dp"
				 android:layout_weight="1"
				 android:background="@drawable/button_number_violet_shape"
				 android:text="@string/dec_text"
				 android:onClick="decrementValue"
				 android:enabled="false"
				 >
			 </Button>
		 </LinearLayout>

		<Button
			android:id="@+id/readValueBtn"
			style="@style/buttonNumberStyle"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/button_number_violet_shape"
			android:text="@string/read_value"
			android:onClick="readValue"
			android:enabled="false"
			/>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal" >

				<Button
					android:id="@+id/restoreBtn"
					style="@style/buttonNumberStyle"
					android:layout_width="0dp"
					android:layout_height="50dp"
					android:layout_marginTop="10dp"
					android:layout_weight="1"
					android:background="@drawable/button_number_violet_shape"
					android:text="@string/nfc_cache_to_block"
					android:onClick="restore"
					android:enabled="false"
					>
				</Button>

				<Button
					android:id="@+id/transferBtn"
					style="@style/buttonNumberStyle"
					android:layout_width="0dp"
					android:layout_height="50dp"
					android:layout_marginTop="10dp"
					android:layout_marginLeft="20dp"
					android:layout_weight="1"
					android:background="@drawable/button_number_violet_shape"
					android:text="@string/nfc_block_to_cache"
					android:onClick="transfer"
					android:enabled="false"
					>
				</Button>
			</LinearLayout>

		 <TextView
			android:id="@+id/textViewValueData"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/color_6b6b6b" />

		 <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal"
			 android:visibility="gone"
			 >

			 <Button
				 android:id="@+id/haltBtn"
				 style="@style/buttonNumberStyle"
				 android:layout_width="0dp"
				 android:layout_height="50dp"
				 android:layout_weight="1"
				 android:layout_marginTop="10dp"
				 android:background="@drawable/button_number_violet_shape"
				 android:text="@string/halt_text" >
			 </Button>

			 <Button
				 android:id="@+id/removeBtn"
				 style="@style/buttonNumberStyle"
				 android:layout_width="0dp"
				 android:layout_height="50dp"
				 android:layout_marginLeft="20dp"
				 android:layout_weight="1"
				 android:layout_marginTop="10dp"
				 android:background="@drawable/button_number_violet_shape"
				 android:text="@string/remove_text" >
			 </Button>
		 </LinearLayout>

		  <Button
			android:id="@+id/nfc_close_btn"
			style="@style/buttonNumberStyle"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/button_number_violet_shape"
			android:text="@string/nfc_close_text"
		    android:onClick="nfcclose"
		    android:enabled="false"
			  />
			<!--继续寻卡-->
			<Button
				android:id="@+id/bt_nfc_detect_no_stop"
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:layout_marginTop="10dp"
				android:background="@drawable/button_number_violet_shape"
				style="@style/buttonNumberStyle"
				android:onClick="detectNotStop"
				android:text="@string/nfc_detect_no_stop"
				/>

			<Button
				android:id="@+id/nfc_back_btn"
				style="@style/buttonNumberStyle"
				android:layout_width="fill_parent"
				android:layout_height="50dp"
				android:layout_marginTop="10dp"
				android:background="@drawable/button_number_violet_shape"
				android:text="@string/back"
				android:onClick="back"
				/>
		 </LinearLayout>
      
    </ScrollView>
     
</RelativeLayout >