<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdk2.demo.subsystem.LedActivity">

    <include
        android:id="@+id/titlebar"
        layout="@layout/titlebar" />

    <TableLayout
        android:id="@+id/led_tablelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlebar"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/button_stress_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/common_stress_test" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subsystem_led_control"
            android:textColor="@color/Blue"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/Blue"
            android:contentDescription="@string/subsystem_led_test_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/subsystem_led_type" />

            <Spinner
                android:id="@+id/spinner_led_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/subsystem_led_color" />

            <Spinner
                android:id="@+id/spinner_led"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TableRow android:layout_marginTop="5dp">

            <SeekBar
                android:id="@+id/seekbar_led"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:max="255" />

            <TextView
                android:id="@+id/seekbar_led_num"
                android:layout_width="30dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp">

            <Button
                android:id="@+id/ledOpenBtn"
                style="@style/buttonNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"
                android:onClick="onClick"
                android:text="@string/common_open" />

            <Button
                android:id="@+id/ledCloseBtn"
                style="@style/buttonNumberStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_number_violet_shape"
                android:onClick="onClick"
                android:text="@string/common_close" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
