<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">
    <!--1 显示回调内容-->
    <ScrollView
        android:id="@+id/scll_msg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_bts"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:scrollbars="vertical"
            android:text="执行结果"
            android:textSize="20sp"
            />
    </ScrollView>

    <!--2 滚动按钮-->
    <ScrollView
        android:id="@+id/ll_bts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/scll_msg"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <!--竖排-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <!--版本号-->
            <Button
                android:id="@+id/bt_info_system"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:layout_marginBottom="10dp"
                android:onClick="versionSystem"
                android:text="@string/info_system"
                 />

            <Button
                android:id="@+id/bt_info_ic"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:layout_marginBottom="10dp"
                android:onClick="versionIc"
                android:text="@string/info_ic"
                 />

            <Button
                android:id="@+id/bt_info_sdk_service_version"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:layout_marginBottom="10dp"
                android:onClick="versionSdkService"
                android:text="@string/info_sdk_service_version"
                />

            <Button
                android:id="@+id/bt_info_sn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:layout_marginBottom="10dp"
                android:onClick="systemSn"
                android:text="@string/info_sn"
                />

            <!--关闭-->
            <Button
                android:id="@+id/bt_back"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:onClick="back"
                android:text="@string/back"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>