<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">
    <!--0 说明-->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_bg_tab"
        android:gravity="left"
        android:scrollbars="vertical"
        android:text="1. select .zip file updateSystem\n 2.select .bin file update MCU \n 3.donwnload reader log path: /sdcard/posLog.zip "
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scll_msg"
        />
    <!--1 显示回调内容-->
    <ScrollView
        android:id="@+id/scll_msg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintBottom_toTopOf="@+id/ll_bts"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        >
        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:scrollbars="vertical"
            android:text="执行结果"
            android:textSize="20sp"
            />
    </ScrollView>

    <!--2 滚动按钮-->
    <ScrollView
        android:id="@+id/ll_bts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/scll_msg"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <!--竖排-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <!--升级-->
            <Button
                android:id="@+id/bt_update_ic"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:layout_marginBottom="10dp"
                android:onClick="updateIc"
                android:text="@string/update_ic"
                />

            <Button
                android:id="@+id/bt_update_system"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:layout_marginBottom="10dp"
                android:onClick="updateSystem"
                android:text="@string/update_system"
                 />

            <Button
                android:id="@+id/bt_update_reboot"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:layout_marginBottom="10dp"
                android:onClick="reboot"
                android:text="@string/system_reboot"
                 />

            <!--log-->
            <Button
                android:id="@+id/bt_log"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:layout_marginBottom="10dp"
                android:onClick="downloadLog"
                android:text="@string/log_download"
                 />
            <!--关闭-->
            <Button
                android:id="@+id/bt_back"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_number_violet_shape"
                style="@style/buttonNumberStyle"
                android:onClick="back"
                android:text="@string/back"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>